Major update for uploading file
Added an endpoint inside student.js for handling file uploads.
- uploadStudentXlsx:
   - check if file exists
   -  parse through each row, checking if required columns have been filled already
   -  If not filled, returns error
   -  If everything is filled, push new additions to the database

app.js
- adds endpoint

openapi.yaml:
- adds api schemas for the responses and request
